--- a/gradle.properties
+++ b/gradle.properties
@@ -46,13 +46,13 @@ mod_id=throwablebombs
 # The human-readable display name for the mod.
 mod_name=Throwable Bombs
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GNU GPLv3
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=1.20.2-0.0.1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=tw1zzler.throwablebombs
+mod_group_id=io.github.tw1zzler.throwablebombs
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Tw1ZZLER
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
