--- a/gradle.properties
+++ b/gradle.properties
@@ -32,10 +32,10 @@ loader_version_range=[48,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.20.2
+mapping_version=2023.10.08-1.20.2
 
 
 ## Mod Properties
@@ -52,8 +52,8 @@ mod_version=1.20.2-0.0.1.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=io.github.tw1zzler.throwablebombs
+mod_group_id=net.tw1zzler.throwablebombs
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Tw1ZZLER
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=A mod adding various bombs to Minecraft, that can be thrown at things/people!
