--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,9 @@ mapping_channel=parchment
 # This must match the format required by the mapping channel.
 mapping_version=2023.10.08-1.20.2
 
+## Dependency Properties
+jei_version=16.0.0.28
+
 
 ## Mod Properties
 
